Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37582

QTimeZone::availableTimeZoneIds() crashes on Mac OSX 10.9.2

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.3.0 RC1
    • 5.2.0, 5.2.1
    • Core: Event loop
    • None
    • Mac OSX 10.9.2
      MacBookPro Retina Early 2013
      Qt 5.2.1 installed from binaries (not compiled from source)
    • macOS
    • 55e430a3b3f4f225da6b7192773f082b5411741b 4fc3d9ba6301a8c28a1f4ddf1665b0fe49ce092d

      Whenever I use QNetworkAccessManager (regardless of the query, even an empty url as in the code attached) and make a call to the QTimeZone(QByteArray) constructor, the application crashes somewhere in the internals of QCocoaEventDispatcher::processEvents() shortly after the call to QTimeZone is made.

      Only the constructors involving the timeZoneId (QByteArray) produce the crash. The other constructors do not appear to pose a problem.

      The crash is produced only with QApplication and QGUIApplication, not with QCoreApplication.

      Attached you can find the minimum code that consistently reproduces the error on my computer (did not have the occasion to test on other configurations). I also attached the debug stack at the moment of the crash (stack.txt).

      Needless to say that if this is really a bug, it seriously poses problems for mobile development since quite a few applications need access to the network and to the current timezone and there doesn't seem to be a workaround. At least I didn't find any yet.

        1. LocationManager.cpp
          1 kB
        2. LocationManager.h
          0.6 kB
        3. main.cpp
          0.4 kB
        4. stack.txt
          0.4 kB
        5. testNetwork.pro
          0.3 kB
        6. main.cpp
          0.3 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            frederik Frederik Gladhorn
            k.gaitanis Kostas Gaitanis
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes